feat(backend): adiciona perfis de teste e producao, corrige CORS fixo
- application-test.properties: perfil usado pelo GitHub Actions, aponta
  para o servico Postgres do proprio workflow.
- application-prod.properties: perfil de producao pro Render (porta via
  PORT, CORS liberado pro dominio do frontend, SQL logging desligado).
- CORS estava com 'http://localhost:4200' fixo no SecurityConfig, o que
  quebraria requisicoes do frontend publicado no Render; agora vem de
  app.cors.allowed-origins (configuravel por variavel de ambiente).